remove margins on pp banner

--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -54,7 +54,7 @@
 {% endif %}
 
 
-<div id="pp-banner" class="d-print-none u-desktop-margin-bottom-20 u-desktop-padding-bottom-10 "></div>
+<div id="pp-banner" class="d-print-none"></div>
 
 
 <div class="c-header c-header-xs">
