added space at top of ads

--- a/static/sass/components/_component.advertisment.scss
+++ b/static/sass/components/_component.advertisment.scss
@@ -14,6 +14,7 @@
     }
     &__banner{
         &-head,&-1,&-2,&-3,&-4{
+            margin-top: 30px;
             @media #{$desktop-up}{
                 min-width: 728px;
             }
