--- a/partials/_single-article.twig
+++ b/partials/_single-article.twig
@@ -206,7 +206,7 @@
         status          : article.status,
         social          : isArticle,
         title           : articleTitle,
-        image           : _Media.getMediaUrl(article.featuredMedia,imgWidth, imgHeight, imageparams ),
+        articleImg      : _Media.getMediaUrl(article.featuredMedia,imgWidth, imgHeight, imageparams ),
         guid            : article.guid,
         url             : redirUrl,
         id              : article.articleId,
