--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -42,6 +42,7 @@
 @import "component.advertisment";
 @import "component.related-articles";
 @import "component.article-gallery";
+@import 'component.article-property';
 @import "component.author";
 @import "component.notify";
 
