--- a/layout-article-gallery.twig
+++ b/layout-article-gallery.twig
@@ -9,7 +9,7 @@
 
 {% set themeColor = "#4A90E2" %}
 {% if networkData['styling']['colours']['headingColor'] is defined %}
-{% set themeColor = networkData['styling']['colours']['headingColor'] %}
+    {% set themeColor = networkData['styling']['colours']['headingColor'] %}
 {% endif %}
 
 {% set relatedArticles = [] %}
@@ -19,9 +19,8 @@
 
 
 {% set cropped = true %}
-{% if article.additionalInfo is defined and article.additionalInfo.image_crop is defined and
-article.additionalInfo.image_crop == 'full' %}
-{% set cropped = false %}
+{% if article.additionalInfo is defined and article.additionalInfo.image_crop is defined and article.additionalInfo.image_crop == 'full' %}
+    {% set cropped = false %}
 {% endif %}
 
 
@@ -30,7 +29,7 @@ article.additionalInfo.image_crop == 'full' %}
 
 {% set pwstats = {} %}
 {% if not _User.isGuest() %}
-{% set pwstats = _User.getPaywallStats(false) %}
+    {% set pwstats = _User.getPaywallStats(false) %}
 {% endif %}
 
 
@@ -40,35 +39,35 @@ article.additionalInfo.image_crop == 'full' %}
 {% set paywallType = "" %}
 {% if not _User.isAdminUser() and article.showPaywall == true %}
 
-{% set showPaywall = true %}
+    {% set showPaywall = true %}
 
-{# DETERMINE IF PAYWALL IS 'PAID' OR 'FREE' #}
-{% if articleBlogInfo['paywallAllowSignupOnly'] == true %}
-{# TURN FREE PAYWALL OFF FOR LOGGED IN USERS AND SET FREE PAYWALL TO SHOW #}
+    {# DETERMINE IF PAYWALL IS 'PAID' OR 'FREE' #}
+    {% if articleBlogInfo['paywallAllowSignupOnly'] == true %}
+    {# TURN FREE PAYWALL OFF FOR LOGGED IN USERS AND SET FREE PAYWALL TO SHOW #}
 
-{% if not _User.isGuest() %}
-{% set showPaywall = false %}
-{% else %}
-{% set paywallType = "signup" %}
-{% endif %}
+        {% if not _User.isGuest() %}
+            {% set showPaywall = false %}
+        {% else %}
+            {% set paywallType = "signup" %}
+        {% endif %}
 
 
-{% else %}
-{# DETERMINE WHICH PAYWALL TO SHOW #}
-{% if not _User.isGuest() %}
+        {% else %}
+        {# DETERMINE WHICH PAYWALL TO SHOW #}
+        {% if not _User.isGuest() %}
 
-{% if pwstats['type'] == 'article' %}
-{% set paywallType = "topup" %}
-{% elseif pwstats['type'] == 'time' %}
-{% set paywallType = "renew" %}
-{% else %}
-{% set paywallType = "upgrade" %}
-{% endif %}
+            {% if pwstats['type'] == 'article' %}
+                {% set paywallType = "topup" %}
+            {% elseif pwstats['type'] == 'time' %}
+                {% set paywallType = "renew" %}
+            {% else %}
+                {% set paywallType = "upgrade" %}
+            {% endif %}
 
-{% else %}
-{% set paywallType = "subscribe" %}
-{% endif %}
-{% endif %}
+        {% else %}
+            {% set paywallType = "subscribe" %}
+        {% endif %}
+    {% endif %}
 {% endif %}
 
 
@@ -78,43 +77,42 @@ article.additionalInfo.image_crop == 'full' %}
 
 {% if showPaywall == true %}
 
-{% set storySplit = ArticleContent | split('</p>') %}
-{% set para2 = storySplit[1] | slice(0, 80) ~ '</p>' %}
-{% set ArticleContent = [storySplit[0], para2] | join('</p>') %}
+    {% set storySplit = ArticleContent | split('</p>') %}
+    {% set para2 = storySplit[1] | slice(0, 80) ~ '</p>' %}
+    {% set ArticleContent = [storySplit[0], para2] | join('</p>') %}
 
-{% set plans = _Paywall.getActiveNetworkPaywallPlans() %}
-{% for plan in plans %}
-{% if plan.trial_status == "1" %}
-{% set trialToggle = true %}
-{% endif %}
-{% endfor %}
+    {% set plans = _Paywall.getActiveNetworkPaywallPlans() %}
+    {% for plan in plans %}
+        {% if plan.trial_status == "1" %}
+            {% set trialToggle = true %}
+        {% endif %}
+    {% endfor %}
 
-{% else %}
-{% if config['inventory']['articleAd'] is defined %}
-{% set adPos = config['inventory']['articleAd'] %}
+    {% else %}
+        {% if config['inventory']['articleAd'] is defined %}
+            {% set adPos = config['inventory']['articleAd'] %}
 
-{% set storySplit = ArticleContent | split('<p>') %}
+            {% set storySplit = ArticleContent | split('<p>') %}
 
-    {% if storySplit[(adPos['position'] * 2) - 1] %}
-    {% if adPos['slot'] is defined %}
-    {% set inarticleslot = adPos['slot'] %}
-    {% set ArticleContent = '
-<p>' %}
-    {% for para in storySplit %}
-    {% set ArticleContent = ArticleContent ~ '
-<p>' ~ para %}
-    {% if loop.index == adPos['position'] %}
-    {% set ArticleContent = ArticleContent ~ '
-<div class="u-margin-top-30 u-margin-bottom-30 '~ adPos['class'] ~'">
-    <div class="j-adslot" id="' ~ inarticleslot ~ '" data-adshape="banner"></div>
-</div>' %}
-{% endif %}
-{% endfor %}
-{% endif %}
+            {% if storySplit[(adPos['position'] * 2) - 1] %}
+                {% if adPos['slot'] is defined %}
+                {% set inarticleslot = adPos['slot'] %}
+                {% set ArticleContent = ' <p>' %}
+                {% for para in storySplit %}
+                    {% set ArticleContent = ArticleContent ~ ' <p>' ~ para %}
+                    {% if loop.index == adPos['position'] %}
+                        {% set ArticleContent = ArticleContent ~ '
+                            <div class="u-margin-top-30 u-margin-bottom-30 '~ adPos['class'] ~'">
+                                <div class="j-adslot" id="' ~ inarticleslot ~ '" data-adshape="banner"></div>
+                            </div>' %}
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
 
-{% endif %}
-{% endif %}
-{% set recentArticles = _Article.getRecentArticles({ limit: 5, excludeArticleIds : [article.id] }) %}
+        {% endif %}
+    {% endif %}
+
+    {% set recentArticles = _Article.getRecentArticles({ limit: 5, excludeArticleIds : [article.id] }) %}
 {% endif %}
 
 
@@ -123,7 +121,7 @@ article.additionalInfo.image_crop == 'full' %}
 
 {% set watermark = false %}
 {% if config['watermark']['settings'] is defined and config['watermark']['sections'][articleBlog|lower] is defined %}
-{% set watermark = config['watermark']['settings'] %}
+    {% set watermark = config['watermark']['settings'] %}
 {% endif %}
 
 
@@ -132,23 +130,27 @@ article.additionalInfo.image_crop == 'full' %}
 {% set articleImg = false %}
 {% set featured = false %}
 {% if article.media|length > 0 %}
-{% set articleImg = true %}
-{% set featured = article.media[0].type %}
+    {% set articleImg = true %}
+    {% set featured = article.media[0].type %}
 {% endif %}
 
 
 
-{% set profileImg = _Media.getMediaUrl(article.createdBy['media'], 100, 100, {radius: 'max', gravity: 'face', 'crop':
-'thumb', type: 'user'}) %}
+{% set profileImg = _Media.getMediaUrl(article.createdBy['media'], 100, 100, {radius: 'max', gravity: 'face', 'crop': 'thumb', type: 'user'}) %}
 {% set publishDate = _AppHelper.getDefaultTimezoneDateTime(article.publishDate, 'F, Y') %}
 {% set updateDate = _AppHelper.getDefaultTimezoneDateTime(article.updatedDateTime,'F j, Y') %}
 
 
 {% set updated = false %}
 {% if article.publishedDateTime != article.updatedDateTime %}
-{% set updatedAgo = _AppHelper.getSecondsSincePublished(article.updatedDateTime) %}
-{% if updatedAgo < 86400 %} {% set updateDate=_AppHelper.getRelativeTime(article.updatedDateTime) ~ " ago" %} {% endif
-    %} {% set updated=true %} {% endif %} <main id="main" class="o-body-container o-body-container-md u-margin-top-60"
+    {% set updatedAgo = _AppHelper.getSecondsSincePublished(article.updatedDateTime) %}
+    {% if updatedAgo < 86400 %} 
+            {% set updateDate = _AppHelper.getRelativeTime(article.updatedDateTime) ~ " ago" %} 
+    {% endif %} 
+    {% set updated = true %} 
+{% endif %} 
+
+<main id="main" class="o-body-container o-body-container-md u-margin-top-60"
     role="main" data-paywall-type="{{paywallType}}">
         
         <div class="c-article c-article-xs c-article__galleryView">
@@ -190,11 +192,11 @@ article.additionalInfo.image_crop == 'full' %}
                                             {% if article.media|length> 0 %}
                                                 {% set imageFeature = featured == 'image' ? true : false %}
                                                 {{this.render('partials/gallery.twig', {
-                                                media: article.media,
-                                                default: imageFeature,
-                                                watermark: watermark,
-                                                galleryStyle: galleryStyle,
-                                                showPaywall: showPaywall
+                                                    media: article.media,
+                                                    default: imageFeature,
+                                                    watermark: watermark,
+                                                    galleryStyle: galleryStyle,
+                                                    showPaywall: showPaywall
                                                 }) | raw}}
                                             {% endif %}
                                         </div>
