--- a/layouts/partials/_submenu_navigation.twig
+++ b/layouts/partials/_submenu_navigation.twig
@@ -1,14 +1,45 @@
 {% for item in items %}
-<li>
-    <a href="{{item.link |raw}}" class="{{class}} {{activeClass}} {{externalClass}} c-navigation__item" {% if
+
+{% set children = item.children is defined and item.children | length > 0 %}
+{% set linkSpacer = customClass is defined and customClass is not empty ? customClass : 'vv' %}
+<li class="{% if children %} dropdown {% endif %}">
+    <a href="{{item.link |raw}}" class="{{class}} {{activeClass}} {{externalClass}} {{linkSpacer}} c-navigation__item" {% if
         item.target !="" %} target="{{item.target}}" {% endif %}>
         {% if item.label != "" %}
-        {{item.label}}
+            {{item.label}}
         {% elseif item.blogTitle != "" %}
-        {{item.blogTitle}}
+            {{item.blogTitle}}
         {% elseif item.pageTitle != "" %}
-        {{item.pageTitle}}
+            {{item.pageTitle}}
         {% endif %}
     </a>
+    {% if children %}
+        <ul class="custom-menu">
+            {% for childItem in item.children %}
+                {% set externalClass = (childItem.isExternal) ? 'external-link' : '' %}
+                {% set activeClass = (childItem.link == _AppHelper.getServerUrl()) ? 'active' : ''%}
+                {% set subChildren = childItem.children is defined and childItem.children | length > 0 %}
+
+                <li class="{% if subChildren %} sub-dropdown js-sideBarList {% endif %}">
+                    <a class="{{activeClass}} {{externalClass}}  two" href="{{childItem.link |raw}}" {% if childItem.target != "" %}target="{{childItem.target}}"{% endif %}>
+                        {{ ((childItem.label is empty) ? ((childItem.pageTitle is empty) ? childItem.blogTitle : childItem.pageTitle) : childItem.label)}}
+                    </a>
+                    {% if subChildren %}
+                        <ul class="sub-custom-menu">
+                            {% for subChildItems in childItem.children %}
+                                {% set subExternalClass = (subChildItems.isExternal) ? 'external-link' : '' %}
+                                {% set subActiveClass = (subChildItems.link == _AppHelper.getServerUrl()) ? 'active' : ''%}
+                                <li>
+                                    <a {% if subChildItems.isExternal %} target="_blank" {% endif %} class="{{subActiveClass}} {{subExternalClass}} two" href="{{subChildItems.link |raw}}" {% if subChildItems.target != "" %}target="{{subChildItems.target}}"{% endif %}>
+                                        {{ ((subChildItems.label is empty) ? ((subChildItems.pageTitle is empty) ? subChildItems.blogTitle : subChildItems.pageTitle) : subChildItems.label)}}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 </li>
 {% endfor %}
