--- a/static/sass/components/_component.article.scss
+++ b/static/sass/components/_component.article.scss
@@ -12,7 +12,8 @@
     font-weight: $weightRegular;
     @include font-size(13);
     color: $grey5;
-    margin-bottom: 25px;
+    margin-top: 10px;
+    margin-bottom: 15px;
   }
 
   &__features {
