--- a/layout-article-property.twig
+++ b/layout-article-property.twig
@@ -76,7 +76,7 @@
 
 
 
-<main id="main" class="o-body-container o-body-container-md u-margin-top-60" role="main">
+<main id="main" class="o-body-container o-body-container-md u-margin-top-60 mb-0" role="main">
     <div class="c-article c-article-xs c-article__carousel">
         <div class="container">
             <div class="row">
