--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -102,7 +102,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="c-header-main__container">
-                        <div class="">
+                        <div class="c-header-main__menu">
                             <div class="c-hamburger__wrap js-menu">
                                 <div class="c-hamburger__wrap-icons o-hamburger"></div>
                                 <div class="c-hamburger__wrap-text">Menu</div>
