--- a/contact.twig
+++ b/contact.twig
@@ -22,7 +22,7 @@
     
 
 
-<main id="main" class="c-contact" role="main">
+<main id="main" class="c-contact d-none" role="main">
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-10 mx-auto">
