--- a/section.twig
+++ b/section.twig
@@ -55,7 +55,7 @@
                                 article: articles[articleCount], 
                                 position: (articleCount+1),
                                 imageSize: {width: 635, height: 450},
-                                containerClass: "card-2-mobile card-2-tablet card-5-desktop"
+                                containerClass: "card-2-mobile card-2-tablet card-5-desktop section_firstCard"
                             }) | raw}}
                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                         </div>
@@ -77,7 +77,7 @@
                                                 article: articles[articleCount], 
                                                 position: (articleCount+1),
                                                 imageSize: {width: 306, height: 185},
-                                                containerClass: "card-2-mobile card-2-tablet card-4-desktop card-withoutImage"
+                                                containerClass: "card-2-mobile card-2-tablet card-4-desktop"
                                             }) | raw}}
                                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                                         </div>
