--- a/partials/panels/section-05.twig
+++ b/partials/panels/section-05.twig
@@ -12,7 +12,9 @@
         <div class="u-generic-topBorder {{colorInverse}}"></div>
         <div class="c-page-head c-page-head-xs {{colorInverse}}">
             <div class="u-heading__large u-heading__large-xs u-pr--6">{{title}}</div>
-            <a href="{{link}}" class="c-page-head__link">View all</a>
+            {% if LinkHide is defined and LinkHide is not empty %}
+                <a href="{{link}}" class="c-page-head__link">View all</a>
+            {% endif %}
         </div>
     </div>
 </div>
