--- a/partials/panels/section-07.twig
+++ b/partials/panels/section-07.twig
@@ -7,7 +7,9 @@
         <div class="u-generic-topBorder "></div>
         <div class="c-page-head c-page-head-xs">
             <div class="u-heading__large u-heading__large-xs u-pr--6">{{title}}</div>
-            <a href="{{link}}" class="c-page-head__link">View all</a>
+            {% if LinkHide is defined and LinkHide is not empty %}
+                <a href="{{link}}" class="c-page-head__link">View all</a>
+            {% endif %}
         </div>
     </div>
 </div>
