--- a/render.twig
+++ b/render.twig
@@ -43,7 +43,7 @@
         articles        : feedArr,
         link            : config.link is defined ? config.link : blogLink,
         title           : config.title is defined ? config.title : '',
-        LinkHide        : config.LinkHide is defined ? config.LinkHide : '',
+        LinkShow        : config.LinkShow is defined ? config.LinkShow : '',
         dev             : dev,
         site            : site,
         networkData     : networkData,
