--- a/partials/panels/section-10.twig
+++ b/partials/panels/section-10.twig
@@ -23,6 +23,7 @@
                             {{this.render('../_single-event-list.twig', {
                                 event: events[i], 
                                 imageSuppress: 'true',
+                                swap : 'false',
                                 containerClass: "event-card-3-mobile event-card-3-tablet event-card-3-desktop"
                             }) | raw}}
                         </div>
