--- a/partials/panels/section-12.twig
+++ b/partials/panels/section-12.twig
@@ -36,6 +36,7 @@
                 {{this.render('../_single-article.twig', {
                     article: popular[i], 
                     imageSuppress: true,
+                    swap : 'false',
                     containerClass: "card-6-mobile card-6-tablet card-6-desktop"
                 }) | raw}}
             </div>
