--- a/partials/panels/section-02.twig
+++ b/partials/panels/section-02.twig
@@ -25,6 +25,7 @@
                     article: articles[articleCount],
                     position: (articleCount+1),
                     imageSize: {width: 306, height: 185},
+                    swap : 'false',
                     containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription
                     card--verticalMulti card--verticalMulti-xs",
                     timeSuppress: timeSuppress
@@ -37,6 +38,7 @@
                     article: articles[articleCount],
                     position: (articleCount+1),
                     imageSize: {width: 635, height: 450},
+                    swap : 'false',
                     containerClass: "card-2-mobile card-2-tablet card-5-desktop",
                     timeSuppress: timeSuppress
                     }) | raw}}
@@ -48,6 +50,7 @@
                     article: articles[articleCount],
                     position: (articleCount+1),
                     imageSize: {width: 306, height: 185},
+                    swap : 'false',
                     containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription
                     card--verticalMulti card--verticalMulti-xs",
                     timeSuppress: timeSuppress
