--- a/partials/panels/section-04.twig
+++ b/partials/panels/section-04.twig
@@ -23,6 +23,7 @@
                     article: articles[articleCount],
                     position: (articleCount+1),
                     imageSize: {width: 633, height: 400},
+                    swap : 'false',
                     containerClass: "card-2-mobile card-2-tablet card-7-desktop u-margin-bottom-20",
                     timeSuppress: timeSuppress
                     }) | raw}}
@@ -41,6 +42,7 @@
                             article: articles[articleCount],
                             position: (articleCount+1),
                             imageSize: {width: 79, height: 96},
+                            swap : 'false',
                             containerClass: "card-1-mobile card-1-tablet card-1-desktop u-margin-bottom-20",
                             timeSuppress: timeSuppress
                             }) | raw}}
@@ -58,6 +60,7 @@
                             article: articles[articleCount],
                             position: (articleCount+1),
                             imageSize: {width: 79, height: 96},
+                            swap : 'false',
                             containerClass: "card-1-mobile card-1-tablet card-1-desktop",
                             timeSuppress: timeSuppress
                             }) | raw}}
