--- a/partials/panels/section-05.twig
+++ b/partials/panels/section-05.twig
@@ -25,6 +25,7 @@
             article: articles[articleCount],
             position: (articleCount+1),
             imageSize: {width: 633, height: 400},
+            swap : 'false',
             containerClass: 'card-2-mobile card-2-tablet card-7-desktop u-margin-bottom-20 '~inverseContainerClass,
             timeSuppress: timeSuppress
             }) | raw}}
@@ -38,6 +39,7 @@
             article: articles[articleCount],
             position: (articleCount+1),
             imageSize: {width: 306, height: 185},
+            swap : 'false',
             containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription "~inverseContainerClass,
             timeSuppress: timeSuppress
             }) | raw}}
