--- a/partials/panels/section-06.twig
+++ b/partials/panels/section-06.twig
@@ -24,6 +24,7 @@
                         article: articles[articleCount],
                         position: (articleCount+1),
                         imageSize: {width: 79, height: 96},
+                        swap : 'false',
                         containerClass: "card-1-mobile card-1-tablet card-1-desktop",
                         timeSuppress: timeSuppress
                     }) | raw}}
