--- a/partials/panels/section-07.twig
+++ b/partials/panels/section-07.twig
@@ -26,6 +26,7 @@
                                 article: articles[articleCount],
                                 position: (articleCount+1),
                                 imageSize: {width: 520, height: 384},
+                                swap : 'false',
                                 containerClass: "card-2-mobile card-2-tablet card-7-desktop",
                                 timeSuppress: timeSuppress
                                 }) | raw}}
@@ -38,6 +39,7 @@
                                 article: articles[articleCount],
                                 position: (articleCount+1),
                                 imageSize: {width: 306, height: 185},
+                                swap : 'false',
                                 containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription
                                 card--verticalMulti card--verticalMulti-xs",
                                 timeSuppress: timeSuppress
@@ -53,6 +55,7 @@
                         article: articles[articleCount],
                         position: (articleCount+1),
                         imageSize: {width: 79, height: 96},
+                        swap : 'false',
                         containerClass: "card-1-mobile card-1-tablet card-1-desktop",
                         timeSuppress: timeSuppress
                         }) | raw}}
