--- a/partials/panels/section-08.twig
+++ b/partials/panels/section-08.twig
@@ -27,6 +27,7 @@
                     article: articles[articleCount],
                     position: (articleCount+1),
                     imageSize: {width: 306, height: 185},
+                    swap : 'false',
                     containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription",
                     timeSuppress: timeSuppress
                     }) | raw}}
