--- a/partials/panels/section-09.twig
+++ b/partials/panels/section-09.twig
@@ -22,6 +22,7 @@
             position: (articleCount+1),
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
+            swap : 'false',
             template: 'feature',
             url: altUrls[0] is defined ? networkData.defaultBlogUrl ~ altUrls[0] : ''
         }) | raw}}
@@ -32,6 +33,7 @@
             position: (articleCount+1),
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
+            swap : 'false',
             template: 'feature',
             url: altUrls[1] is defined ? networkData.defaultBlogUrl ~ altUrls[1] : ''
         }) | raw}}
@@ -42,6 +44,7 @@
             position: (articleCount+1),
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
+            swap : 'false',
             template: 'feature',
             url: altUrls[2] is defined ? networkData.defaultBlogUrl ~ altUrls[2] : ''
         }) | raw}}
@@ -54,6 +57,7 @@
             position: (articleCount+1),
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
+            swap : 'false',
             template: 'feature',
             url: altUrls[3] is defined ? networkData.defaultBlogUrl ~ altUrls[3] : ''
         }) | raw}}
@@ -64,6 +68,7 @@
             position: (articleCount+1),
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
+            swap : 'false',
             template: 'feature',
             url: altUrls[4] is defined ? networkData.defaultBlogUrl ~ altUrls[4] : ''
         }) | raw}}
@@ -74,6 +79,7 @@
             position: (articleCount+1),
             containerClass: "card-8-mobile card-8-tablet card-8-desktop",
             imageSize: {width: 95, height: 130},
+            swap : 'false',
             template: 'feature',
             url: altUrls[5] is defined ? networkData.defaultBlogUrl ~ altUrls[5] : ''
         }) | raw}}
