--- a/partials/panels/section-11.twig
+++ b/partials/panels/section-11.twig
@@ -27,6 +27,7 @@
         article: articles[articleCount],
         position: (articleCount+1),
         imageSize: {width: 306, height: 185},
+        swap : 'false',
         containerClass: inverseContainerClass,
         timeSuppress: timeSuppress
         }) | raw}}
