--- a/layout-article-property.twig
+++ b/layout-article-property.twig
@@ -175,7 +175,8 @@
 
             <div class="row c-article__main-container">
                 <div class="col-12 col-lg-1">
-                    <div class="u-generic-socialIcons u-generic-socialIcons--sticky u-generic-socialIcons-xs">
+                    {% if config.displayShareIcons is defined and config.displayShareIcons is not empty %}
+                        <div class="u-generic-socialIcons u-generic-socialIcons--sticky u-generic-socialIcons-xs">
                             <a class="u-generic-socialIcons__item"
                                 href="mailto:?subject=Check%20out%20this%20article&body={{article.url}}" target="_blank">
                                 <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -204,7 +205,6 @@
                                         </g>
                                     </g>
                                 </svg>
-
                             </a>
                             <a class="u-generic-socialIcons__item"
                                 href="https://www.facebook.com/sharer/sharer.php?u={{article.url}}&title={{ article.title|url_encode }}"
@@ -234,7 +234,6 @@
                                         </g>
                                     </g>
                                 </svg>
-
                             </a>
                             <a class="u-generic-socialIcons__item"
                                 href="https://twitter.com/share?text={{ article.title|url_encode }}&url={{article.url}}"
@@ -264,8 +263,6 @@
                                         </g>
                                     </g>
                                 </svg>
-
-
                             </a>
                             <a class="u-generic-socialIcons__item" href="https://linkedin.com/share?text={{ article.title|url_encode }}&url={{article.url}}"
                                 target="_blank">
@@ -295,11 +292,9 @@
                                         </g>
                                     </g>
                                 </svg>
-
-
-
                             </a>
                         </div>
+                    {% endif %}
                 </div>
                 <div class="col-12 col-lg-10">
                     <div class="row">
@@ -367,7 +362,8 @@
                                         </div>
                                         <hr />
                                         {% if showPaywall == false %}
-                                            <div class="u-generic-socialIcons mb-3 mb-xl-5 justify-content-end">
+                                            {% if config.displayShareIcons is defined and config.displayShareIcons is not empty %}
+                                                <div class="u-generic-socialIcons mb-3 mb-xl-5 justify-content-end">
                                                     <div class="u-generic-socialIcons-text">Share article</div>
                                                     <a class="u-generic-socialIcons__item"
                                                         href="mailto:?subject=Check%20out%20this%20article&body={{article.url}}" target="_blank">
@@ -438,6 +434,7 @@
                                                         </svg>
                                                     </a>
                                                 </div>
+                                            {% endif %}
                                         {% endif %}
                                     </div>
                                 </div>
