--- a/partials/panels/section-13.twig
+++ b/partials/panels/section-13.twig
@@ -29,6 +29,7 @@
         imageSize: {width: 306, height: 185},
         swap : 'false',
         containerClass: inverseContainerClass,
+        template: 'property',
         timeSuppress: timeSuppress
         }) | raw}}
         {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
